[#53] Fix: Arrow missalignment when sidebar is open.

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -515,7 +515,7 @@
 
                 .nav_menu_arrow {
                     top: 23px !important;
-                    right: -6px !important;
+                    right: -16px !important;
                     -webkit-transition: all 0.2s;
                     transition: all 0.5s;
                 }
